# dani-e-os-seres-de-papel

./: .gitignore  Cargo.toml  README.md  WINDOWS_ANTIVIRUS_FIX.md  manifest.xml
.cargo/: config.toml
.github/workflows/: dev-build.yml  rust.yml  windows-msvc.yml
assets/audio/: README.md
src/: config.rs  deck.rs  effects.rs  enemy.rs  entity.rs  error.rs  gameturn.rs  main.rs  player.rs  state.rs
src/state/: battle_state.rs  damage_particle.rs  game_state.rs  menu.rs  mod.rs
src/state/ui/: battle.rs  components.rs  enemy_selection.rs  game_over.rs  menu.rs  mod.rs  sound_settings.rs
