[package]
name = "dani-seres-do-papel"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = { version = "0.4.14", features = ["audio"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"


[[bin]]
name = "dani_seres_do_papel"
path = "src/main.rs"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
