[package]
name = "dani_seres_do_papel"
version = "1.0.5"
edition = "2021"
authors = ["JefteSG"]
description = "Dani e os Seres de Papel - Jogo de cartas estratégico"
license = "MIT"
repository = "https://github.com/JefteSG/dani-e-os-seres-de-papel"
keywords = ["game", "cards", "strategy", "rust", "macroquad"]
categories = ["games"]

[dependencies]
macroquad = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[target.x86_64-pc-windows-msvc]
rustflags = [
    "-C", "target-feature=+crt-static",
    "-C", "link-arg=/SUBSYSTEM:WINDOWS",
    "-C", "link-arg=/ENTRY:mainCRTStartup"
]
