[package]
name = "dani_seres_do_papel"
version = "1.0.6"
edition = "2024"
authors = ["JefteSG"]
description = "Dani e os Seres de Papel - Strategic card game"
license = "MIT"
repository = "https://github.com/JefteSG/dani-e-os-seres-de-papel"
keywords = ["game", "cards", "strategy", "rust", "macroquad"]
categories = ["games"]

[dependencies]
macroquad = { version = "0.4.14", features = ["audio"] }
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.134"

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
web-sys = "0.3"

# Desktop-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = "0.24"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[target.x86_64-pc-windows-msvc]
rustflags = [
    "-C", "target-feature=+crt-static",
    "-C", "link-arg=/SUBSYSTEM:WINDOWS",
    "-C", "link-arg=/ENTRY:mainCRTStartup"
]
